--- a/tdl/pyvenv.cfg
+++ b/tdl/pyvenv.cfg
@@ -1,3 +1,8 @@
-home = /usr/bin
+home = c:\python
+implementation = CPython
+version_info = 3.9.6.final.0
+virtualenv = 20.16.6
 include-system-site-packages = false
-version = 3.6.9
+base-prefix = c:\python
+base-exec-prefix = c:\python
+base-executable = c:\python\python.exe
